--- a/src/app/shared/detail-shared/disk-usage-panel/disk-usage-panel.component.scss
+++ b/src/app/shared/detail-shared/disk-usage-panel/disk-usage-panel.component.scss
@@ -43,7 +43,7 @@
   .legend-item {
     display: flex;
     align-items: center;
-    gap: var(--space-sm);
+    gap: var(--space-xs);
     padding: var(--space-sm);
     background: var(--window-bg-color);
     border-radius: var(--radius-xs);
