--- a/src/app/shared/detail-shared/vfs-control/vfs-control-panel.component.html
+++ b/src/app/shared/detail-shared/vfs-control/vfs-control-panel.component.html
@@ -53,11 +53,11 @@
               {{ 'shared.vfsControl.indexedWarning' | translate: { suffix: ':[0]' } }}
             </p>
             <a
-              href="https://forum.rclone.org/t/rc-api-vfs-stats-fails-with-more-than-one-vfs-active-for-multiple-mounts-but-rejects-unique-suffixes-from-vfs-list/53081"
+              href="https://github.com/rclone/rclone/issues/9120"
               target="_blank"
               rel="noopener noreferrer"
             >
-              {{ 'shared.vfsControl.learnMore' | translate }}
+              #9120
             </a>
           </div>
         </div>
