--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -355,106 +355,126 @@
             }
           </div>
 
-          @if (rcloneUpdateStatus().updateInfo?.update_available) {
-            <div class="update-card available">
-              <div class="update-header">
-                <mat-icon svgIcon="circle-up"></mat-icon>
-                <div class="update-title">
-                  <h4>{{ 'modals.about.rcloneUpdateAvailable' | translate }}</h4>
-                  <span class="new-version">
-                    {{ 'modals.about.version' | translate }}
-                    {{
-                      rcloneUpdateStatus().updateInfo?.latest_version_clean ||
-                        rcloneUpdateStatus().updateInfo?.latest_version
-                    }}
-                    <span class="release-badge badge-{{ rcloneUpdateChannel() }}">
-                      {{ getChannelLabel(rcloneUpdateChannel()) | translate }}
+          @if (isLocalBackend()) {
+            @if (rcloneUpdateStatus().updateInfo?.update_available) {
+              <div class="update-card available">
+                <div class="update-header">
+                  <mat-icon svgIcon="circle-up"></mat-icon>
+                  <div class="update-title">
+                    <h4>{{ 'modals.about.rcloneUpdateAvailable' | translate }}</h4>
+                    <span class="new-version">
+                      {{ 'modals.about.version' | translate }}
+                      {{
+                        rcloneUpdateStatus().updateInfo?.latest_version_clean ||
+                          rcloneUpdateStatus().updateInfo?.latest_version
+                      }}
+                      <span class="release-badge badge-{{ rcloneUpdateChannel() }}">
+                        {{ getChannelLabel(rcloneUpdateChannel()) | translate }}
+                      </span>
                     </span>
-                  </span>
+                  </div>
+                </div>
+
+                @if (rcloneUpdateStatus().updateInfo?.release_notes) {
+                  <button
+                    mat-stroked-button
+                    class="whats-new-button"
+                    (click)="showWhatsNew('rclone')"
+                  >
+                    <mat-icon svgIcon="file-lines"></mat-icon>
+                    {{ 'modals.about.whatsNewRclone' | translate }}
+                  </button>
+                }
+
+                <div class="update-buttons">
+                  <button
+                    matButton="filled"
+                    (click)="installRcloneUpdate()"
+                    [disabled]="rcloneUpdateStatus().updating"
+                  >
+                    @if (rcloneUpdateStatus().updating) {
+                      <mat-spinner diameter="16"></mat-spinner>
+                      {{
+                        rcloneUpdateStatus().updating
+                          ? ('modals.about.updating' | translate)
+                          : ('modals.about.updateRclone' | translate)
+                      }}
+                    } @else {
+                      {{ 'modals.about.updateRclone' | translate }}
+                    }
+                  </button>
+                  <button mat-button (click)="skipRcloneUpdate()">
+                    {{ 'modals.about.skipVersion' | translate }}
+                  </button>
                 </div>
               </div>
-
-              @if (rcloneUpdateStatus().updateInfo?.release_notes) {
-                <button
-                  mat-stroked-button
-                  class="whats-new-button"
-                  (click)="showWhatsNew('rclone')"
-                >
-                  <mat-icon svgIcon="file-lines"></mat-icon>
-                  {{ 'modals.about.whatsNewRclone' | translate }}
-                </button>
-              }
-
-              <div class="update-buttons">
-                <button
-                  matButton="filled"
-                  (click)="installRcloneUpdate()"
-                  [disabled]="rcloneUpdateStatus().updating"
-                >
-                  @if (rcloneUpdateStatus().updating) {
-                    <mat-spinner diameter="16"></mat-spinner>
-                    {{
-                      rcloneUpdateStatus().updating
-                        ? ('modals.about.updating' | translate)
-                        : ('modals.about.updateRclone' | translate)
-                    }}
-                  } @else {
-                    {{ 'modals.about.updateRclone' | translate }}
-                  }
-                </button>
-                <button mat-button (click)="skipRcloneUpdate()">
-                  {{ 'modals.about.skipVersion' | translate }}
-                </button>
-              </div>
-            </div>
-          } @else {
-            <!-- Up to Date Card -->
-            <ng-container
-              *ngTemplateOutlet="
-                upToDateCard;
-                context: { $implicit: 'modals.about.rcloneUpToDate' }
-              "
-            ></ng-container>
-          }
-
-          <button
-            matButton="outlined"
-            (click)="checkForRcloneUpdates()"
-            [disabled]="rcloneUpdateStatus().checking"
-            class="check-button"
-          >
-            @if (rcloneUpdateStatus().checking) {
-              <mat-spinner diameter="16"></mat-spinner>
-              {{ 'modals.about.checking' | translate }}
             } @else {
-              {{ 'modals.about.checkRcloneUpdates' | translate }}
-            }
-          </button>
-
-          <div class="settings-section">
-            <h4>{{ 'modals.about.rcloneUpdateSettings' | translate }}</h4>
-            <ng-container
-              *ngTemplateOutlet="
-                settingsControls;
-                context: {
-                  autoCheck: rcloneAutoCheck(),
-                  channel: rcloneUpdateChannel(),
-                  channels: channels,
-                  isRclone: true,
-                }
-              "
-            ></ng-container>
-          </div>
-
-          @if (rcloneSkippedVersions().length > 0) {
-            <div class="skipped-section">
-              <h4>{{ 'modals.about.skippedRcloneUpdates' | translate }}</h4>
+              <!-- Up to Date Card -->
               <ng-container
                 *ngTemplateOutlet="
-                  skippedList;
-                  context: { versions: rcloneSkippedVersions(), isRclone: true }
+                  upToDateCard;
+                  context: { $implicit: 'modals.about.rcloneUpToDate' }
                 "
               ></ng-container>
+            }
+
+            <button
+              matButton="outlined"
+              (click)="checkForRcloneUpdates()"
+              [disabled]="rcloneUpdateStatus().checking"
+              class="check-button"
+            >
+              @if (rcloneUpdateStatus().checking) {
+                <mat-spinner diameter="16"></mat-spinner>
+                {{ 'modals.about.checking' | translate }}
+              } @else {
+                {{ 'modals.about.checkRcloneUpdates' | translate }}
+              }
+            </button>
+
+            <div class="settings-section">
+              <h4>{{ 'modals.about.rcloneUpdateSettings' | translate }}</h4>
+              <ng-container
+                *ngTemplateOutlet="
+                  settingsControls;
+                  context: {
+                    autoCheck: rcloneAutoCheck(),
+                    channel: rcloneUpdateChannel(),
+                    channels: channels,
+                    isRclone: true,
+                  }
+                "
+              ></ng-container>
+            </div>
+
+            @if (rcloneSkippedVersions().length > 0) {
+              <div class="skipped-section">
+                <h4>{{ 'modals.about.skippedRcloneUpdates' | translate }}</h4>
+                <ng-container
+                  *ngTemplateOutlet="
+                    skippedList;
+                    context: { versions: rcloneSkippedVersions(), isRclone: true }
+                  "
+                ></ng-container>
+              </div>
+            }
+          } @else {
+            <!-- Remote Backend Info Card -->
+            <div class="update-card not-supported">
+              <mat-icon svgIcon="cloud"></mat-icon>
+              <div class="status-text">
+                <h4>{{ 'modals.about.remoteBackend' | translate }}</h4>
+                <p>
+                  {{ 'modals.about.remoteUpdateInfo' | translate }}
+                  <a
+                    href="https://github.com/rclone/rclone/issues/9120"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    #9120
+                  </a>
+                </p>
+              </div>
             </div>
           }
         </div>
