--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1008,6 +1008,7 @@ mat-accordion {
     display: flex;
     gap: 12px;
     font-size: clamp(12px, 2vw, 14px);
+    font-weight: 500;
   }
 }
 
@@ -1051,7 +1052,7 @@ mat-accordion {
 
   background: var(--popover-bg-color);
   color: var(--window-fg-color);
-  border-radius: var(--radius-md);
+  border-radius: var(--radius-sm);
   padding: 6px;
   box-shadow: var(--shadow-popover);
 
@@ -1073,7 +1074,7 @@ mat-accordion {
     font-weight: 500;
     color: var(--window-fg-color);
 
-    border-radius: var(--border-radius);
+    border-radius: var(--radius-xs);
     transition: var(--transition-instant);
 
     &:hover,
